--- a/tpls/directive.html
+++ b/tpls/directive.html
@@ -11,7 +11,9 @@
     <!--<div gen-div>no</div>-->
 
     <div ng-init="array=[1,2,3,4]">
-        <div ng-repeat="a in array track by $index" gen-div="a"></div>
+        <!--<div ng-repeat="a in array track by $index" gen-div="a"></div>-->
+
+        <div set-text gen-div></div>
     </div>
 </body>
 
