--- a/tpls/directive.html
+++ b/tpls/directive.html
@@ -14,6 +14,7 @@
         <!--<div ng-repeat="a in array track by $index" gen-div="a"></div>-->
 
         <div set-text gen-div></div>
+        <div>ddddd</div>
     </div>
 </body>
 
